--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
-            android:textSize="45sp" android:gravity="center" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.251"/>
+            android:textSize="45sp" android:gravity="center" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.377"/>
     <Button
             android:text="LOG IN"
             android:layout_width="0dp"
@@ -25,6 +25,16 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginBottom="148dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"/>
+    <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="25dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintVertical_bias="0.909"
+            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintBottom_toTopOf="@+id/button2"/>
     <Button
             android:text="SIGN UP"
             android:layout_width="0dp"
