--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/phoneNumber"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -91,6 +90,8 @@
             app:layout_constraintStart_toStartOf="@+id/repeatPassword"
             app:layout_constraintHorizontal_bias="0.0"
             android:hint="Birth Date" android:autofillHints=""
+            android:onClick="showDatePicker"
+            android:focusable="false"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/repeatPassword"/>
     <EditText
             android:layout_width="0dp"
@@ -103,12 +104,13 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
             app:layout_constraintStart_toStartOf="parent" android:autofillHints=""/>
+
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:ems="10"
-            android:id="@+id/editText4"
+            android:id="@+id/phoneNumber"
             app:layout_constraintEnd_toEndOf="@+id/birthDate"
             app:layout_constraintStart_toStartOf="@+id/birthDate" app:layout_constraintHorizontal_bias="0.0"
             android:hint="@android:string/emptyPhoneNumber" android:autofillHints=""
