--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
         android:id="@+id/phoneNumber"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".homePageActivity">
+        tools:context=".HomeFragment">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
@@ -20,7 +20,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu"/>
     <TextView
-            android:text="TextView"
             android:layout_width="68dp"
             android:layout_height="38dp"
             android:id="@+id/welcomeText" android:layout_marginTop="8dp"
@@ -33,10 +32,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/sign_out_button" android:layout_marginTop="8dp"
+            android:onClick="onClick"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/nav_view" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.013"/>
+            app:layout_constraintVertical_bias="0.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
