--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginActivity">
+        tools:context=".SignInFragment">
 
     <EditText
             android:id="@+id/fieldEmail"
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />
 
     <Button
-            android:id="@+id/google_sign_in_button"
+            android:id="@+id/sign_in_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="152dp"
