--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -9,7 +9,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".SignUpActivity">
+        tools:context=".SignUpFragment">
 
     <EditText
             android:id="@+id/email"
@@ -45,42 +45,29 @@
             android:ems="10"
             android:id="@+id/repeatPassword"
             app:layout_constraintEnd_toEndOf="@+id/password" app:layout_constraintStart_toStartOf="@+id/password"
-            android:hint="Repeat Password"
+            android:hint="@string/repeat_password"
             android:autofillHints=""
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/password"
-    />
+            />
 
     <Button
-            android:id="@+id/registerButton"
-            android:enabled="true"
+            android:id="@+id/register_button"
             android:layout_width="122dp"
             android:layout_height="46dp"
             android:layout_gravity="start"
             android:layout_marginStart="48dp"
             android:layout_marginEnd="48dp"
+            android:layout_marginBottom="8dp"
+            android:enabled="true"
             android:text="@string/action_sign_in"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText4" app:layout_constraintVertical_bias="0.113"/>
-
-    <ProgressBar
-            android:id="@+id/loading"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/password"
-            app:layout_constraintStart_toStartOf="@+id/password"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.242" app:layout_constraintHorizontal_bias="0.498"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
+            app:layout_constraintVertical_bias="0.113" />
+
     <EditText
             android:layout_width="0dp"
             android:layout_height="45dp"
@@ -89,8 +76,7 @@
             android:id="@+id/birthDate" app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
             app:layout_constraintStart_toStartOf="@+id/repeatPassword"
             app:layout_constraintHorizontal_bias="0.0"
-            android:hint="Birth Date" android:autofillHints=""
-            android:onClick="showDatePicker"
+            android:hint="@string/birth_date" android:autofillHints=""
             android:focusable="false"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/repeatPassword"/>
     <EditText
@@ -99,7 +85,7 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/userName"
-            android:hint="User Name"
+            android:hint="@string/user_name"
             android:layout_marginTop="52dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
