--- a/app/src/main/res/layout/fragment_stream_settings.xml
+++ b/app/src/main/res/layout/fragment_stream_settings.xml
@@ -8,7 +8,7 @@
     tools:context=".StreamSettingsFragment">
 
     <Switch
-        android:id="@+id/timerSwitch"
+        android:id="@+id/timerSwitchp"
         android:layout_width="215dp"
         android:layout_height="34dp"
         android:layout_marginEnd="96dp"
