stream ve pair with pal'e giriyor.

--- a/app/src/main/res/layout/fragment_solo_session_settings.xml
+++ b/app/src/main/res/layout/fragment_solo_session_settings.xml
@@ -11,22 +11,23 @@
         android:id="@+id/timerSwitchp"
         android:layout_width="215dp"
         android:layout_height="34dp"
-        android:layout_marginEnd="96dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="188dp"
         android:layout_marginBottom="496dp"
         android:text="Timer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.522" />
+        app:layout_constraintVertical_bias="0.567" />
 
     <Switch
         android:id="@+id/focusReminderSwitch"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="76dp"
         android:text="Focus Reminder"
-        app:layout_constraintEnd_toEndOf="@+id/breakTimeMin"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/breakTimeMin"
         app:layout_constraintTop_toBottomOf="@+id/breakTimeMin" />
 
@@ -79,10 +80,12 @@
         android:id="@+id/startSoloSessionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginBottom="324dp"
         android:text="START SOLO SESSION"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/backgroundSoundSwitch"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/backgroundSoundSwitch"
         app:layout_constraintTop_toBottomOf="@+id/backgroundSoundSwitch" />
 
