- inputs to Solosession with timer settings

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -54,9 +54,6 @@
             android:label="fragment_home"
             tools:layout="@layout/fragment_home" >
         <action
-                android:id="@+id/action_navigation_home_to_streamSettingsFragment"
-                app:destination="@id/streamSettingsFragment" />
-        <action
                 android:id="@+id/action_navigation_home_to_mainFragment"
                 app:destination="@id/mainFragment"
                 app:popUpTo="@+id/mainFragment"
@@ -65,6 +62,9 @@
                     android:name="action"
                     android:defaultValue="none" />
         </action>
+        <action
+                android:id="@+id/action_navigation_home_to_soloSessionSettingsFragment"
+                app:destination="@id/soloSessionSettingsFragment" />
     </fragment>
     <fragment
             android:id="@+id/navigation_profile"
@@ -82,19 +82,27 @@
             android:label="fragment_social"
             tools:layout="@layout/fragment_social" />
     <fragment
-            android:id="@+id/streamSettingsFragment"
-            android:name="com.example.studypal.StreamSettingsFragment"
-            android:label="fragment_stream_settings"
-            tools:layout="@layout/fragment_stream_settings" >
-        <action
-                android:id="@+id/action_streamSettingsFragment_to_soloSessionFragment"
-                app:destination="@id/soloSessionFragment"
-                app:popUpTo="@id/streamSettingsFragment"
-                app:popUpToInclusive="true"/>
-    </fragment>
-    <fragment
             android:id="@+id/soloSessionFragment"
             android:name="com.example.studypal.SoloSessionFragment"
             android:label="fragment_solo_session"
-            tools:layout="@layout/fragment_solo_session" />
+            tools:layout="@layout/fragment_solo_session" >
+        <argument
+                android:name="sessionMins"
+                app:argType="long" />
+        <argument
+                android:name="breakMins"
+                app:argType="long" />
+        <argument
+                android:name="sessionCount"
+                app:argType="integer" />
+    </fragment>
+    <fragment
+            android:id="@+id/soloSessionSettingsFragment"
+            android:name="com.example.studypal.SoloSessionSettingsFragment"
+            android:label="fragment_solo_session_settings"
+            tools:layout="@layout/fragment_solo_session_settings" >
+        <action
+                android:id="@+id/action_soloSessionSettingsFragment_to_soloSessionFragment"
+                app:destination="@id/soloSessionFragment" />
+    </fragment>
 </navigation>
