Rating bar added, settings xml base is ready (settings page is not an ordinary fragment now)

--- a/app/src/main/res/layout/fragment_end_session.xml
+++ b/app/src/main/res/layout/fragment_end_session.xml
@@ -5,31 +5,58 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#009688"
         tools:context=".EndSessionFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
             android:id="@+id/messageText"
-            android:layout_width="294dp"
-            android:layout_height="37dp"
+            android:layout_width="315dp"
+            android:layout_height="119dp"
             android:text="@string/you_have_studied_for_minutes_congratulations"
             android:singleLine="false"
             android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.187" />
+            app:layout_constraintVertical_bias="0.137" />
 
     <Button
             android:id="@+id/advance_button"
             android:text="@string/okay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="76dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            app:layout_constraintBottom_toTopOf="@+id/advance_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/messageText"
-            app:layout_constraintVertical_bias="0.508" />
+            app:layout_constraintVertical_bias="0.709" />
+
+    <TextView
+            android:id="@+id/textView2"
+            android:text="Please score your focus level for thiş study session. You can see the study statistics in your profile."
+            android:layout_width="287dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
