--- a/app/src/main/res/layout/fragment_one2_one_session.xml
+++ b/app/src/main/res/layout/fragment_one2_one_session.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".One2OneSession">
+        tools:context=".One2OneSessionFragment">
 
     <org.webrtc.SurfaceViewRenderer
             android:id="@+id/local_view"
