dönünce patlamıyor, countdowntimer reset upon orientation fixed with viewmodel+observer

--- a/app/src/main/res/layout/fragment_solo_session.xml
+++ b/app/src/main/res/layout/fragment_solo_session.xml
@@ -18,12 +18,12 @@ tools:context=".SoloSessionFragment">
             app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-            android:id="@+id/timeLeftTextWiev"
+            android:id="@+id/timeLeftTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Minutes"
-            android:textColor="#80FFFFFF"
-            android:textSize="22sp"
+            android:text="TimeLeft"
+            android:textColor="#CB000000"
+            android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/local_view"
             app:layout_constraintHorizontal_bias="0.743"
@@ -35,11 +35,12 @@ tools:context=".SoloSessionFragment">
             android:id="@+id/stateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Session"
-            android:textColor="#80FFFFFF"
-            android:textSize="22sp"
+            android:text="StateText"
+            android:textColor="#CB000000"
+            android:textSize="30sp"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/timeLeftTextWiev"
+            app:layout_constraintEnd_toStartOf="@+id/timeLeftTextView"
             app:layout_constraintHorizontal_bias="0.58"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
