--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,4 +19,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.434" />
+
+    <Button
+            android:id="@+id/one2OneSessionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="24dp"
+            android:text="One to One Session"
+            app:layout_constraintEnd_toEndOf="@+id/soloSessionSettingsButton"
+            app:layout_constraintStart_toStartOf="@+id/soloSessionSettingsButton"
+            app:layout_constraintTop_toBottomOf="@+id/soloSessionSettingsButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
