--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
     <SwitchPreferenceCompat
         app:key="Hmm"
-        app:title="Hmm"/>
+        app:title="Hmm"
+            app:allowDividerBelow="true"/>
+
+
+    <EditTextPreference
+        app:key="@string/default_study_session_minutes"
+        app:title="Default study session minutes"
+        app:summary="Click to change"
+        app:defaultValue="25"
+        app:isPreferenceVisible="true"
+        app:allowDividerAbove="true"/>
+
+    <EditTextPreference
+            app:key="@string/default_break_minutes"
+            app:title="Default break minutes"
+            app:summary="Click to change"
+            app:defaultValue="5"
+            app:allowDividerBelow="true"/>
+
+    <SwitchPreferenceCompat
+            app:key="spotify"
+            app:summary="Connect to Spotify to enhance your focus with Spotify playlists!"
+            app:title="Connect to Spotify"
+            app:allowDividerAbove="true"/>
 
     <Preference
         app:key="version"
         app:title="Build version"
-        app:summary="0.0.0"/>
+        app:summary="1.0.0"/>
 
 </PreferenceScreen>
