--- a/app/src/main/res/layout/fragment_solo_session.xml
+++ b/app/src/main/res/layout/fragment_solo_session.xml
@@ -6,7 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".SoloSessionFragment">
 
-    <org.webrtc.SurfaceViewRenderer
+    <TextureView
             android:id="@+id/local_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -16,7 +16,6 @@ tools:context=".SoloSessionFragment">
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
-
     <TextView
             android:id="@+id/timeLeftTextView"
             android:layout_width="wrap_content"
