--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -45,10 +45,8 @@
 
                 <ImageView
                         android:id="@+id/iv"
-                        android:layout_width="109dp"
-                        android:layout_height="67dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_width="89dp"
+                        android:layout_height="65dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/sessionLengthText"
                         app:layout_constraintStart_toStartOf="parent"
@@ -59,8 +57,10 @@
                         android:id="@+id/sessionLengthText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="2dp"
                         android:text="TextView"
-                        android:textAlignment="center"
+                        android:textAlignment="viewStart"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -72,9 +72,10 @@
                         android:id="@+id/sessionScoreText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="2dp"
                         android:text="TextView"
-                        android:textAlignment="center"
+                        android:textAlignment="viewStart"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
