--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -171,5 +171,8 @@
                 android:id="@+id/action_one2OneSessionFragment_to_endSessionFragment"
                 app:destination="@id/endSessionFragment"
                 app:popUpTo="@+id/navigation_home" />
+        <argument
+                android:name="backgroundMusic"
+                app:argType="string" />
     </fragment>
 </navigation>
