--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <SwitchPreferenceCompat
-        app:key="Hmm"
-        app:title="Hmm"
-            app:allowDividerBelow="true"/>
-
 
     <EditTextPreference
-        app:key="@string/default_study_session_minutes"
+        app:key="default_study_session_minutes"
         app:title="Default study session minutes"
         app:summary="Click to change"
         app:defaultValue="25"
@@ -16,11 +11,11 @@
         app:allowDividerAbove="true"/>
 
     <EditTextPreference
-            app:key="@string/default_break_minutes"
-            app:title="Default break minutes"
-            app:summary="Click to change"
+            app:allowDividerBelow="true"
             app:defaultValue="5"
-            app:allowDividerBelow="true"/>
+            app:key="default_break_minutes"
+            app:summary="Click to change"
+            app:title="Default break minutes" />
 
     <SwitchPreferenceCompat
             app:key="spotify"
